done mua sắm tập trung

--- a/Mua sắm tập trung/advanconfig.json
+++ b/Mua sắm tập trung/advanconfig.json
@@ -700,6 +700,7 @@ B6_PARAM_APPROVE_BUOC9_MSTT
         "createDate": "(-9999)",
         "createUser": "(-10000)",
         "actionType": "APPROVE",
+        "deptId": "(-9965)",
         "importExport": {
             "ticketCode": "(-0)",
             "orgRequest": "(-8901)",
@@ -714,7 +715,8 @@ B6_PARAM_APPROVE_BUOC9_MSTT
             "construction": "(-7700)",
             "requestDate": "(-8700)",
             "receiptNumber": "(-9000)",
-            "numberVoteApprove": "(-8600)",
+            "numberVoteApprove": "(-8550)",
+            "addressOrg": "(-8400)",
             "category": "(-7600)",
             "storekeeper": "(-5600)",
             "contractPO": "(-9911)",
@@ -760,11 +762,11 @@ B6_MSTT_PARAM_APPROVE_BUOC3
         "requestSubject": "(ticket-title)",
         "type": "(-2700)",
         "status": "INPROGRESS",
-        "statusErp": 1,
         "statusValidate": "1",
         "createDate": "(-9999)",
         "createUser": "(-10000)",
         "actionType": "APPROVE",
+        "deptId": "(-9965)",
         "importExport": {
             "ticketCode": "(-0)",
             "orgRequest": "(-8901)",
@@ -779,7 +781,8 @@ B6_MSTT_PARAM_APPROVE_BUOC3
             "construction": "(-7700)",
             "requestDate": "(-8700)",
             "receiptNumber": "(-9000)",
-            "numberVoteApprove": "(-8600)",
+            "numberVoteApprove": "(-8550)",
+            "addressOrg": "(-8400)",
             "category": "(-7600)",
             "storekeeper": "(-5600)",
             "contractPO": "(-9911)",
@@ -829,11 +832,11 @@ B6_MSTT_PARAM_APPROVE_BUOC4
         "requestSubject": "(ticket-title)",
         "type": "(-2700)",
         "status": "INPROGRESS",
-        "statusErp": 1,
         "statusValidate": "1",
         "createDate": "(-9999)",
         "createUser": "(-10000)",
         "actionType": "APPROVE",
+        "deptId": "(-9965)",
         "importExport": {
             "ticketCode": "(-0)",
             "orgRequest": "(-8901)",
@@ -848,7 +851,8 @@ B6_MSTT_PARAM_APPROVE_BUOC4
             "construction": "(-7700)",
             "requestDate": "(-8700)",
             "receiptNumber": "(-9000)",
-            "numberVoteApprove": "(-8600)",
+            "numberVoteApprove": "(-8550)",
+            "addressOrg": "(-8400)",
             "category": "(-7600)",
             "storekeeper": "(-5600)",
             "contractPO": "(-9911)",
@@ -908,11 +912,11 @@ B6_MSTT_PARAM_APPROVE_BUOC6
         "requestSubject": "(ticket-title)",
         "type": "(-2700)",
         "status": "INPROGRESS",
-        "statusErp": 1,
         "statusValidate": "1",
         "createDate": "(-9999)",
         "createUser": "(-10000)",
         "actionType": "APPROVE",
+        "deptId": "(-9965)",
         "importExport": {
             "ticketCode": "(-0)",
             "orgRequest": "(-8901)",
@@ -927,7 +931,8 @@ B6_MSTT_PARAM_APPROVE_BUOC6
             "construction": "(-7700)",
             "requestDate": "(-8700)",
             "receiptNumber": "(-9000)",
-            "numberVoteApprove": "(-8600)",
+            "numberVoteApprove": "(-8550)",
+            "addressOrg": "(-8400)",
             "category": "(-7600)",
             "storekeeper": "(-5600)",
             "contractPO": "(-9911)",
@@ -976,12 +981,12 @@ B6_MSTT_PARAM_APPROVE_BUOC7
         "ticketCode": "(-0)",
         "requestSubject": "(ticket-title)",
         "type": "(-2700)",
-        "status": "CLOSED",
-        "statusErp": 1,
+        "status": "INPROGRESS",
         "statusValidate": "1",
         "createDate": "(-9999)",
         "createUser": "(-10000)",
         "actionType": "APPROVE",
+        "deptId": "(-9965)",
         "importExport": {
             "ticketCode": "(-0)",
             "orgRequest": "(-8901)",
@@ -996,7 +1001,8 @@ B6_MSTT_PARAM_APPROVE_BUOC7
             "construction": "(-7700)",
             "requestDate": "(-8700)",
             "receiptNumber": "(-9000)",
-            "numberVoteApprove": "(-8600)",
+            "numberVoteApprove": "(-8550)",
+            "addressOrg": "(-8400)",
             "category": "(-7600)",
             "storekeeper": "(-5600)",
             "contractPO": "(-9911)",
